Minor correction to min dB

--- a/qformat.html
+++ b/qformat.html
@@ -342,7 +342,7 @@
 
                             <div class="control-grp">
                                 <div class="col w25">
-                                    <label for="db_minfloat">Minimum dB value</label>
+                                    <label for="db_minfloat">Minimum finite dB value</label>
                                 </div><!--
                                  --><div class="col w75">
                                     <input id="db_minfloat" type="text" value="0" disabled>
