Minor updates to prose

--- a/qformat.html
+++ b/qformat.html
@@ -355,7 +355,11 @@
                         <fieldset>
                             <legend>Convert</legend>
 
-                            <p>Type an integer or dB value in the boxes below. Click or tab away to update.</p>
+                            <p>
+                                Type an integer or dB value in the boxes below. Click or tab away to update.
+                                The converter will convert the dB value to a linear value (1.0 = 0&nbsp;dB),
+                                and then convert the linear fraction to a fixed-point integer.
+                            </p>
 
                             <div class="control-grp">
                                 <div class="col w25">
