--- a/qformat.html
+++ b/qformat.html
@@ -357,7 +357,7 @@
 
                             <p>
                                 Type an integer or dB value in the boxes below. Click or tab away to update.
-                                The converter will convert the dB value to a linear value (1.0 = 0&nbsp;dB),
+                                The converter will convert the dB value to a linear value (1.0 &equiv; 0&nbsp;dB),
                                 and then convert the linear fraction to a fixed-point integer.
                             </p>
 
