Small modification to error calculation in dB

--- a/qformat.html
+++ b/qformat.html
@@ -20,7 +20,7 @@
                 crossorigin="anonymous">
         </script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-        <script src="qformat.js?v=8"></script>
+        <script src="qformat.js?v=9"></script>
         <script src="qformat.converter.js?v=8"></script>
         <script src="qformat.dbconverter.js?v=8"></script>
         <script src="qformat.calculator.js?v=9"></script>
@@ -240,7 +240,7 @@
 
                             <div class="control-grp">
                                 <div class="col w25">
-                                    <label for="errordb">Representation error (dB)</label>
+                                    <label for="errordb"><span class="tooltip" data-text="Error in dB is calculated with reference to the fractional value.">Representation error (dB)</span></label>
                                 </div><!--
                                  --><div class="col w75">
                                     <input id="errordb" type="text" value="0" disabled>
