--- a/qformat.html
+++ b/qformat.html
@@ -14,16 +14,16 @@
         <meta property="og:type" content="website" />
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="qformat.css?v=19">
+        <link rel="stylesheet" href="css/qformat.css?v=19">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous">
         </script>
         <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-        <script src="qformat.js?v=9"></script>
-        <script src="qformat.converter.js?v=9"></script>
-        <script src="qformat.dbconverter.js?v=9"></script>
-        <script src="qformat.calculator.js?v=10"></script>
+        <script src="scripts/qformat.js?v=9"></script>
+        <script src="scripts/qformat.converter.js?v=9"></script>
+        <script src="scripts/qformat.dbconverter.js?v=9"></script>
+        <script src="scripts/qformat.calculator.js?v=10"></script>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script>
