Replace link to polyfill.io with Cloudflare

--- a/qformat.html
+++ b/qformat.html
@@ -24,7 +24,7 @@
         <script src="scripts/qformat.converter.js?v=9"></script>
         <script src="scripts/qformat.dbconverter.js?v=9"></script>
         <script src="scripts/qformat.calculator.js?v=10"></script>
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script>
             $(function() {
