Add 64-bit option to dB converter

--- a/qformat.html
+++ b/qformat.html
@@ -295,6 +295,7 @@
                                         <option value="16">16</option>
                                         <option value="24" selected>24</option>
                                         <option value="32">32</option>
+                                        <option value="64">64</option>
                                     </select>
                                 </div>
                             </div>
