Minor tweak to label style

--- a/qformat.html
+++ b/qformat.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="css/qformat.css?v=20">
+        <link rel="stylesheet" href="css/qformat.css?v=21">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
                 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
                 crossorigin="anonymous">
@@ -170,7 +170,7 @@
                             </div>
 
                             <div class="control-grp">
-                                <label>Bit positions and values</label>
+                                <label class="center">Bit positions and values</label>
 
                                 <table id="bit-pos">
                                     <tr>
@@ -267,10 +267,10 @@
 
                             <p>Type integers or fractional values in the boxes below separated by commas, spaces or new lines. Click or tab away to update.</p>
 
-                            <label for="batch-int">Integers</label>
+                            <label class="center" for="batch-int">Integers</label>
                             <textarea id="batch-int" rows="6"></textarea>
 
-                            <label for="batch-float">Fractional values</label>
+                            <label class="center" for="batch-float">Fractional values</label>
                             <textarea id="batch-float" rows="6"></textarea>
 
                         </fieldset>
@@ -420,10 +420,10 @@
 
                             <p>Type integers or dB values in the boxes below separated by commas, spaces or new lines. Click or tab away to update.</p>
 
-                            <label for="db_batch-int">Integers</label>
+                            <label class="center" for="db_batch-int">Integers</label>
                             <textarea id="db_batch-int" rows="6"></textarea>
 
-                            <label for="db_batch-float">dB values</label>
+                            <label class="center" for="db_batch-float">dB values</label>
                             <textarea id="db_batch-float" rows="6"></textarea>
 
                         </fieldset>
