More style updates

--- a/eqtool.html
+++ b/eqtool.html
@@ -2,19 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Parametric Equalizer Designer.">
-        <meta name="keywords" content="parametric, equaliser, equalizer, audio, web audio">
+        <meta name="description" content="Parametric Equalizer Designer">
+        <meta name="keywords" content="parametric, equaliser, equalizer, audio, web audio, biquad, biquad calculator, frequency response, phase response">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Parametric EQ Designer</title>
         <meta property="og:title" content="Parametric EQ Designer" />
         <meta property="og:url" content="https://chummersone.github.io/eqtool.html" />
         <meta property="og:locale" content="en_GB" />
-        <meta property="og:description" content="Parametric Equalizer Designer.">
+        <meta property="og:description" content="Parametric Equalizer Designer">
         <meta property="og:site_name" content="chummersone.github.io" />
         <meta property="og:type" content="website" />
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="https://chummersone.github.io/css/qformat.css">
+        <link rel="stylesheet" href="css/qformat.css">
         <link rel="stylesheet" href="css/eqtool.css?v=1">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.js" integrity="sha512-6HrPqAvK+lZElIZ4mZ64fyxIBTsaX5zAFZg2V/2WT+iKPrFzTzvx6QAsLW2OaLwobhMYBog/+bvmIEEGXi0p1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="scripts/eq.js"></script>
@@ -92,6 +92,12 @@
 
     <body>
         <h1>Parametric EQ Designer</h1>
+
+        <p>
+            The parametric EQ designer supports the design of an EQ constructed from a cascade of second-order sections, or
+            <i>biquad</i> filters. Each biquad is designed from the <a href="https://www.w3.org/TR/audio-eq-cookbook/">EQ Cookbook</a>.
+            The overall response arises from connecting the filters in series.
+        </p>
 
         <div class="controlPanel" id="audioControls"><!--
 
