Add error to the coefficient table

--- a/eqtool.html
+++ b/eqtool.html
@@ -82,7 +82,7 @@
                 }, false)
 
                 document.getElementById("viewCoefficients").addEventListener("click", function(event) {
-                    showCoefficientTable()
+                    showCoefficientTable(context.eq)
                 })
 
                 biquadControlsAreEmpty()
