Begin versioning of local assets

--- a/eqtool.html
+++ b/eqtool.html
@@ -14,11 +14,11 @@
         <meta property="og:type" content="website" />
         <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
-        <link rel="stylesheet" href="css/qformat.css">
-        <link rel="stylesheet" href="css/eqtool.css?v=1">
+        <link rel="stylesheet" href="css/qformat.css?v=2">
+        <link rel="stylesheet" href="css/eqtool.css?v=2">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.umd.js" integrity="sha512-6HrPqAvK+lZElIZ4mZ64fyxIBTsaX5zAFZg2V/2WT+iKPrFzTzvx6QAsLW2OaLwobhMYBog/+bvmIEEGXi0p1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="scripts/eq.js"></script>
-        <script src="scripts/eq.ui-control.js"></script>
+        <script src="scripts/eq.js?v=2"></script>
+        <script src="scripts/eq.ui-control.js?v=2"></script>
         <script>
             Chart.defaults.elements.point = {
                 pointStyle: false
